# CV_learning

3D识别相关内容/PNP算法/: PNP算法原理.md
PCL/2D-3D融合/: 2D&3D融合.md  2d_3d.cpp  2d_3d_point.cpp  cab.cpp  学习目标.md  手眼标定(外参标定).md  手眼标定_黑马部分.md
PCL/HTML/: (100条消息) PCL系列——拼接两个点云_张学志の博客-CSDN博客_pcl点云拼接.html  (109条消息) 3D点云——NARF特征_Anderson_Y的博客-CSDN博客_narf特征.html  01-编译安装PCL点云库 _黑马机器人 _ PCL_3D点云.html  KD树简介 - 知乎.html  KNN算法介绍 - 知乎.html  PCL—低层次视觉—关键点检测（NARF） - IronStark - 博客园.html  从零开始的 IMU 状态模型推导.html  图像学习-HOG特征 - 知乎.html  超详细的3D视觉技术学习路线 - 知乎.html
PCL/HTML/(100条消息) PCL系列——拼接两个点云_张学志の博客-CSDN博客_pcl点云拼接_files/: a_002.html  adsbygoogle.js  auto_dup.js  ca-pub-1076724771190722.js  detail-12230971cb.js  detail_enter-fdee416dbe.css  ds.js  edit_copy_code-238d6067fe.js  hm.js  pc_wap_common-501dc4c49b.js  pc_wap_commontools-fbe92c420e.js  report.js  show_ads_impl_with_ama_fy2019.js
PCL/HTML/(109条消息) 3D点云——NARF特征_Anderson_Y的博客-CSDN博客_narf特征_files/: auto_dup.js  csdn-toolbar-default.css  csdn-toolbar.js  detail-7e042faaf2.js  detail_enter-8a5e1f72b9.css  ds.js  hm.js  jQuery.js  pc_wap_common-108ac96833.js  report.js  skin3-template-c298f9ecea.css  user-accusation.css  user-accusation.js
PCL/HTML/01-编译安装PCL点云库 - 黑马机器人 _ PCL-3D点云_files/: baidu-tuisong.js  css.css  extra.js
PCL/HTML/01-编译安装PCL点云库 - 黑马机器人 | PCL-3D点云_files/: application.css  baidu-tongji.js  hm.js
PCL/HTML/KD树简介 - 知乎_files/: column.css  column.js  column_002.js  column_003.css  column_005.css  column_006.css  column_006.js  column_009.js  column_012.js  column_017.js  hm.js  plugins.js  zap.js
PCL/HTML/KNN算法介绍 - 知乎_files/: column.js  column_002.css  column_005.js  column_006.js  column_007.js  column_009.js  column_010.js  column_013.js  column_014.js  column_015.js  column_016.js  column_017.js  vendor.js
PCL/HTML/PCL—低层次视觉—关键点检测（NARF） - IronStark - 博客园_files/: 5051533.html  bundle-codinglife-mobile.css  hm.js  js.js
PCL/HTML/从零开始的 IMU 状态模型推导_files/: hvv6ahj.js
PCL/HTML/图像学习-HOG特征 - 知乎_files/: column.js  column_002.css  column_002.js  column_003.js  column_004.css  column_004.js  column_005.js  column_006.css  column_006.js  column_007.css  column_007.js  column_008.js  column_009.js  column_010.js  column_011.js  column_012.js  column_013.js  column_014.js  column_015.js  (+3 more)
PCL/PCL-Demo/ch_demo/: CMakeLists.txt
PCL/PCL-Demo/ch_demo/release/: CMakeCache.txt  Makefile  cmake_install.cmake
PCL/PCL-Demo/ch_demo/src/: NDT.cpp  cloud_viewer.cpp  kd_tree.cpp  load_pcd.cpp  main.cpp  octree.cpp  pcl_transform.cpp  pcl_visualizer.cpp  save_pcd.cpp
PCL/PCL-Demo/ch_demo/src/2_ad/: PassThrough.cpp  downsample_voxel_grid.cpp  fpfh_estimation.cpp  integral_image_normal.cpp  n_show_get_1.cpp  narf_keypoint_extraction.cpp  normal_estimation.cpp  pfh_estimation.cpp  random_sample_consensus.cpp  range_image.cpp  range_image_border.cpp  remove_outlier.cpp  statistical_removal.cpp  vfh_estimation.cpp
PCL/PCL-Demo/ch_demo/src/3_adad/: aligement_prerejective.cpp  interactive_icp.cpp  iterative_closest_mu_point.cpp  ndt.cpp
PCL/PCL-Demo/ch_demo/src/4_application/: moment_of_inertia.cpp
PCL/点云/: 02_点云的输入与输出.md  点云入门.md
PCL/点云入门/: 点云入门.md  点云拓扑结构.md  点云拓扑结构_KDTree.md  点云拓扑结构_八叉树.md
PCL/点云应用/: 03-3d包容盒子.md  clindyer_segmentation.cpp  cluster_extraction.cpp  moment_of_inertia.cpp  planner_segmentation.cpp  resampling.cpp  template_alignment.cpp  学习目标.md  点云分割.md  点云曲面重建.md  点云模板匹配.md
PCL/点云进阶/: 01Filtering.md  02-滤波器以及其原理.md  03深度图.md  04-关键点Keypoints.md  05-随机采样一致性算法(RANSAC*).md  06-特征描述与提取Features*.md  06-特征描述与提取Features.md  07点云表面法线估算.md  08-3D特征描述子.md  NARF检测.md  NARF检测详细解释.md  PCA.md  学习目标.md  最小生成树.md  有序点云和无序点云.md
PCL/点云高级/: 01_点云中的数学.md  02_点云配准原理概述.md  03_点云匹配准流程示例.md  04交互式ICP.md  05点云配准数学原理.md  cov1.py  iterative_closest_point.cpp  setCameraPosition.md  sigma.py  sigma_basis.py  tran.py  tran1.py  tran_rotate.py  学习目标.md
SLAM/1/: 1.3风格约定.md
SLAM/10_后端2/: 10_1滑动窗口滤波和优化.md  10_2位姿势图.md  10_2推导文档.md  intro.md
SLAM/11_回环检测/: 11_1概述.md  11_2-11_3词袋模型.md  11_2词袋模型.md  11_4相似计算部分.md  11_5实验分析与评价.md  intro.md
SLAM/12_建图/: 12.4_RGB_D稠密建图..md  12_2_4实践_八叉树地图.md  12_2单目稠密重建.md  12_3_2_像素梯度问题.md  12_3_3逆深度.md  12_3实践_单目稠密重建.md  12_4_3八叉树地图.md  CMakeLists.txt  dense_mapping.cpp  intro.md  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp  贪婪投影算法.md
SLAM/2/: 2.1 引子.md  2.2 经典视觉SLAM框架.md  2.3SLAM问题的数学表述.md
SLAM/3/: 3.1旋转矩阵.md  3.3旋转向量和欧拉角.md  3.4 四元数.md  3.5相似_放射_射影变换.md  3.7可视化演示.md  introduce.md
SLAM/3/3.6实践课程/: CMakeLists.txt  useGeometry.cpp
SLAM/3/3.6实践课程/src/: 3.6.1euseGemotry.md  3.6.2coordinateTransform.md  coordinateTransfrom.cpp  useGeometry.cpp
SLAM/4/: 4.1李群与李代数基础.md  4.2 指数与对数映射.md  4.3 李代数求导与扰动模型.md  4.4 实践_Sohus.md  4.4实践.md  4.5相似变换群与李代数.md  4.6小结.md  start.md
SLAM/4/4.4实践课/: CMakeLists.txt
SLAM/4/4.4实践课/src/: useSophus.cpp
SLAM/4/4.4实践课程/: CMakeLists.txt
SLAM/4/4.4实践课程/src/: trajectoryError.cpp  useSophus.cpp
SLAM/9_后端1/: 9_1_3非线性系统和EKF.md  9_1_kEKF的讨论.md  9_1概述.md  9_2_2BA与图优化.md  9_2_3稀疏性和边缘化.md  9_2_4鲁棒核函数.md  主要目标.md  小结.md
SLAM/GPU编程/: CMakeLists.txt  CUDA编程之快速入门.md
SLAM/GPU编程/src/: CPU02.cpp  CPU03.cpp  CPU04.cpp  GPU02.cu  GPU03.cu  GPU04.cu  GPU1.cu
SLAM/IMU/: 从零开始的IMU状态模型推导.md
SLAM/slambook2/ch3/: CMakeCache.txt  CMakeLists.txt
SLAM/slambook2/ch3/examples/: plotTrajectory.cpp
SLAM/第7章视觉里程计/: 主要目标.md
SLAM/第五章_相机与图像/: 5.1相机模型.md  5.2 图像处理.md  主要目标.md
SLAM/第五章_相机与图像/5.3实践_计算机中的图像/: 5.3.1_图像去畸变.md  5.3.2_opencvBasics.md  CMakeLists.txt  Makefile
SLAM/第五章_相机与图像/5.3实践_计算机中的图像/src/: imageBasics.cpp  undistorImage.cpp
SLAM/第五章_相机与图像/5.4.3D视觉实践/: CMakeLists.txt
SLAM/第八章视觉里程计2/: 主要目标.md
SLAM/第六章_非线性优化/: 6.4小结.md  主要目标.md
SLAM/第六章_非线性优化/6.3实践:曲线拟合问题/: 6.3.1手写高斯牛顿法.md  6.3.2使用Ceres进行曲线拟合.md  6.3.3使用g2o进行曲线拟合.md  CMakeLists.txt
SLAM/第六章_非线性优化/6.3实践:曲线拟合问题/src/: ceresCurveFitting.cpp  g2oCurveFitting.cpp
SLAM论文/LifeLong/: LifeLong.md
SLAM论文/cartographer算法/: Scan-Matching.md  cartographer.md
最大生成树与轴流树/: Kruskal.md  chow_tree.md  并查集.md  贝叶斯图.md
激光SLAM/: 激光SLAM01.md
粒子滤波/: MCMC(MH)采样.md  吉布斯采样.md  粒子滤波.md  采样方法的用处与类型.md  马尔科夫链.md
路径规划/: intro.md
(+128 files in other folders)
